# SofaBlender

./: CMakeLists.txt  README.md  blender-exporter.py  mechanical.json  oglmodel.json
Server/: SOFABlender.py
blender-plugin/addons/SofaBlender/: __init__.py  handlers.py  operators.py  panels.py  properties.py  server.py  sofa_directory_importer.py
blender-plugin/addons/SofaNodeEditor/: __init__.py  nodes.json  nodes_old.py  operators.py  panels.py  sofanodes.py  utils.py
examples/BlenderClient/: CantileverBeam.scn
sofa-plugin/: CMakeLists.txt
sofa-plugin/src/SOFABlender/: config.h.in
src/SOFABlender/: BlenderClient.cpp  BlenderClient.h  init.cpp
